--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="dropdown">
             <button class="btn dropdown-toggle" style="color: white;" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
               <img src="Images/profile.png" style="height: 2rem; width: 2rem; margin-left: 0;" alt="profile picture" />
-              Sainath
+              Gaurav
             </button>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
               <li><a class="dropdown-item" href="#">Profile</a></li>
